Bug 1271847 - Only adjust the samples once we have a complete moof. r=kentuckyfriedtakahe, a=lizzard

MozReview-Commit-ID: 5TO0d20uUhZ